--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <html>
   <head>
-    <title>enricobasso website
+    <title>enricobasso website</title>
   </head>
   <body>
     <h1>Hello World!</h1>
