--- a/index.html
+++ b/index.html
@@ -1,8 +1,19 @@
 <html>
-  <head>
-    <title>enricobasso website</title>
-  </head>
-  <body>
-    <h1>Hello World!</h1>
-  </body>
+	<head>
+		<title>Enrico Basso</title>
+		
+		<link rel="stylesheet" href="css/bootstrap.min.css" />
+		<link rel="stylesheet" href="css/style.css" />
+	</head>
+	<body>
+		<h1>Enrico Basso's personal website</h1>
+		<div class="container">
+			<p class="main">Hi~<br />
+				My name is <span class="italic">Enrico Basso</span>.<br />
+				I'm a <span class="italic">Web Developer</span><br />
+				by day and a <span class="italic">Musician</span><br />
+				by night.</p>
+		</div>
+		
+	</body>
 </html>
